# deppy

./: .gitignore  FEATS.md  README.md  TODO.md  graph.dot  main.py  main2.dot  main2.py  main3.py  pyproject.toml
deppy/: __init__.py  async_executor.py  blueprint.py  cache.py  deppy.py  deppy_blueprint.py  executor.py  graph_builder.py  ignore_result.py  multidag_builder.py  node.py  scope.py  sync_executor.py
deppy/blueprint/: blueprint.py  components.py  meta.py
deppy/call_strategies/: __init__.py  cache.py  call_strategy.py
deppy/executor/: __init__.py  async_executor.py  executor.py  hybrid_executor.py  sync_executor.py
deppy/helpers/: DLT.py  asyncclient.py  stated_kwargs.py
deppy/helpers/fastapi/: __init__.py  endpoints.py  websocket.py
deppy/helpers/wrappers/: __init__.py  dkr.py
deppy/wrappers/: __init__.py  dkr.py  stated_kwargs.py
docs/: Concepts.md  GettingStarted.md
examples/: octopus.dot  octopus.py
examples/octopus/: main.py  main_dlt.py  octopus.py  octopus_api.py  octopus_deppy.py
examples/powerbi/: main.py  main_dlt.py  powerbi.py  powerbi_api.py  powerbi_auth.py
tests/: test_blueprint.py  test_cache.py  test_deppy.py  test_graphbuilder.py  test_integration.py  test_node.py  test_scope.py
tests/call_strategies/: test_cache.py
tests/executor/: test_async_executor.py  test_executor.py  test_hybrid_executor.py  test_sync_executor.py
tests/helpers/: test_asyncclient.py
tests/helpers/wrappers/: test_dkr.py  test_stated_kwargs.py
tests/wrappers/: test_dkr.py  test_stated_kwargs.py
