[project]
name = "deppy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.4.2",
    "pydot>=3.0.4",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
