[project]
name = "deppy"
version = "0.1.0"
description = "Deppy: A Python dependency executor that builds and executes DAGs efficiently, optimizing workflows with concurrency and flexibility. Perfect for managing complex dependent tasks effortlessly."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.4.2",
    "pydot>=3.0.4",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.25.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
